fix: text on login screen too small

--- a/public/common/global.css
+++ b/public/common/global.css
@@ -235,9 +235,9 @@ a {
 
 .header {
     font-family: var(--main-font);
-    letter-spacing: 4px;
-    text-transform: uppercase;
-    font-size: 1.2rem;
+    letter-spacing: -1px;
+    /* text-transform: uppercase; */
+    font-size: 1.5rem;
     margin: 0;
 }
 
@@ -524,7 +524,7 @@ button.form-hidden-button {
     align-items: center;
     gap: var(--small-gap);
     list-style-type: none;
-    font-size: 1rem;
+    font-size: 2rem;
     font-family: var(--main-font);
     transition: color 0.15s;
 }
@@ -539,6 +539,7 @@ button.form-hidden-button {
     display: flex;
     align-items: center;
     justify-content: center;
+    font-size: 1rem;
 }
 
 .button-wrapper {
@@ -547,7 +548,7 @@ button.form-hidden-button {
     align-items: center;
     gap: var(--small-gap);
     list-style-type: none;
-    font-size: 0.8rem;
+    font-size: 1rem;
     font-family: var(--main-font);
 }
 
