--- a/public/common/login.css
+++ b/public/common/login.css
@@ -55,6 +55,7 @@ a {
     border-radius: var(--input-field-radius);
     border: none;
     box-shadow: inset 0 0 0 1px var(--login-border);
+    font-size: 1rem;
 }
 
 .login-button {
@@ -66,6 +67,7 @@ a {
     align-items: center;
     justify-content: center;
     gap: var(--small-gap);
+    padding: 0;
 }
 
 .login-button i {
@@ -99,6 +101,5 @@ a {
 
     .login-field {
         padding: 1.5rem;
-        font-size: 1rem;
     }
 }
